# catlearn

./: .Rbuildignore  .gitignore  CHANGELONG.md  DESCRIPTION  NAMESPACE  README.md
R/: RcppExports.R  act2probrat.R  convertSUSTAIN.R  krus96exit.R  krus96train.R  lepell03Mack75.R  lepell03train.R  medin87sustain.R  medin87train.R  nosof88exalcove.R  nosof88exalcove_opt.R  nosof88exalcove_opt.R~  nosof88oat.R  nosof88protoalcove.R  nosof88protoalcove_opt.R  nosof88train.R  nosof94bnalcove.R  nosof94exalcove.R  nosof94exalcove_opt.R  nosof94oat.R  nosof94plot.R  nosof94sustain.R  nosof94train.R  shin92exalcove.R  shin92exalcove_opt.R  shin92oat.R  shin92protoalcove.R  shin92protoalcove_opt.R  shin92protoalcove_opt.R~  shin92train.R  slpDIVA.R  slpDIVA.R~  slpEXIT.R  slpMBMF.R  slpSUSTAIN.R  slpSUSTAIN.Rd  ssecl.R  stsimGCM.R
data/: homa76.RData  krus96.RData  lepell03.RData  nosof88.RData  nosof94.RData  shin92.RData  thegrid.RData
docs/: CHANGELOG.md  CHANGELONG.md  README.md  andy_howto.org  format-rules.md
man/: act2probrat.Rd  catlearn-package.Rd  convertSUSTAIN.Rd  homa76.Rd  krus96.Rd  krus96exit.Rd  krus96train.Rd  lepell03.Rd  lepell03Mack75.Rd  lepell03train.Rd  medin87sustain.Rd  medin87train.Rd  nosof88.Rd  nosof88exalcove.Rd  nosof88exalcove_opt.Rd  nosof88exalcove_opt.Rd~  nosof88oat.Rd  nosof88protoalcove.Rd  nosof88protoalcove_opt.Rd  nosof88train.Rd  nosof94.Rd  nosof94bnalcove.Rd  nosof94exalcove.Rd  nosof94exalcove_opt.Rd  nosof94oat.Rd  nosof94plot.Rd  nosof94sustain.Rd  nosof94train.Rd  shin92.Rd  shin92exalcove.Rd  shin92oat.Rd  (+26 more)
tmp/gureckis-c/: Makefile.am  Makefile.orig  README  SUSTAINCatUnit.cpp  SUSTAINCatUnit.h  SUSTAINCluster.cpp  SUSTAINCluster.h  SUSTAINDimension.cpp  SUSTAINDimension.h  SUSTAINModel.cpp  SUSTAINModel.h  SUSTAINModel.old.cpp  SUSTAINModel.old.h  SUSTAINNetwork.cpp  SUSTAINNetwork.h  main.cpp
(+115 files in other folders)
